<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ossgrounds.camerapraject.VideoPlayerActivity">

    <TextView android:text="@string/camera_praject" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reproduciendo_video"
        android:id="@+id/textView1"
        android:layout_below="@+id/textview"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:textSize="20sp" />

    <VideoView
        android:id="@+id/MyVideoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView1"
        android:layout_above="@+id/seekBar"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="10sp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backButton"
        android:id="@+id/backButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonPlay"
        android:id="@+id/playButton"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/backButton"
     />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonPause"
        android:id="@+id/pauseButton"
        android:layout_alignTop="@+id/playButton"
        android:layout_toRightOf="@+id/playButton"
        android:layout_toEndOf="@+id/playButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNext"
        android:id="@+id/nextButton"
        android:layout_alignTop="@+id/pauseButton"
        android:layout_toRightOf="@+id/pauseButton"
        android:layout_toEndOf="@+id/pauseButton" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_alignLeft="@+id/textview"
        android:layout_alignStart="@+id/textview"
        android:layout_alignRight="@+id/textview"
        android:layout_alignEnd="@+id/textview"
        android:layout_above="@+id/playButton" />

</RelativeLayout>