<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainCamera">

    <ImageView
        android:contentDescription="@string/mainPic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:background="@drawable/doge"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moduleRep"
        android:id="@+id/button"
        android:clickable="true"
        android:nestedScrollingEnabled="false"
        android:onClick="cameraPlay"
        android:layout_marginBottom="25dp"
        android:layout_above="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moduleRec"
        android:id="@+id/button2"
        android:clickable="true"
        android:nestedScrollingEnabled="false"
        android:onClick="cameraRec"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulePic"
        android:id="@+id/button3"
        android:clickable="true"
        android:nestedScrollingEnabled="false"
        android:onClick="cameraPic"
        android:layout_above="@+id/button2"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp"
        android:layout_alignParentEnd="true" />

    <VideoView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/videoView"
        android:layout_above="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="564dp"
        android:layout_marginBottom="61dp" />

</RelativeLayout>
